importing from JSON

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "vite --port 3663 --open",
+		"dev": "vite --port 3660 --open",
+		"api": "json-server -w ./backend/data/db.json -p 3760",
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview",
@@ -24,9 +25,11 @@
 		"@typescript-eslint/parser": "^6.0.0",
 		"@vitejs/plugin-react": "^4.0.3",
 		"autoprefixer": "^10.4.16",
+		"concurrently": "^8.2.2",
 		"eslint": "^8.45.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.3",
+		"json-server": "^0.17.4",
 		"postcss": "^8.4.31",
 		"prettier": "^3.0.3",
 		"sass": "^1.69.5",
