--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite --port 3660 --open",
-		"api": "json-server -w ./backend/data/db.json -p 3760",
+		"api": "json-server -w ./src/data/db.json -p 3760",
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview",
