--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "vite --port 3660 --open",
+		"dev": "conc \"npm run api\" \"npm run frontend\"",
+		"frontend": "vite --port 3660 --open",
 		"api": "json-server -w ./src/data/db.json -p 3760",
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
