--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "conc \"npm run api\" \"npm run frontend\"",
 		"frontend": "vite --port 3660 --open",
-		"api": "json-server -w ./src/data/db.json -p 3760",
+		"api": "json-server -w ./data/db.json -p 3760",
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview",
