--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,21 @@
 {
 	"workbench.colorCustomizations": {
-		"activityBar.activeBackground": "#f5f242",
-		"activityBar.background": "#f5f242",
+		"activityBar.activeBackground": "#a1a1a1",
+		"activityBar.background": "#a1a1a1",
 		"activityBar.foreground": "#15202b",
 		"activityBar.inactiveForeground": "#15202b99",
-		"activityBarBadge.background": "#5858b9",
-		"activityBarBadge.foreground": "#ffffff",
+		"activityBarBadge.background": "#e7e7f7",
+		"activityBarBadge.foreground": "#15202b",
 		"commandCenter.border": "#15202b99",
-		"sash.hoverBorder": "#f5f242",
-		"statusBar.background": "#f5f242",
+		"sash.hoverBorder": "#a1a1a1",
+		"statusBar.background": "#888888",
 		"statusBar.foreground": "#15202b",
 		"statusBarItem.hoverBackground": "#6e6e6e",
-		"statusBarItem.remoteBackground": "#f5f242",
+		"statusBarItem.remoteBackground": "#888888",
 		"statusBarItem.remoteForeground": "#15202b",
-		"titleBar.activeBackground": "#f5f242",
+		"titleBar.activeBackground": "#888888",
 		"titleBar.activeForeground": "#15202b",
-		"titleBar.inactiveBackground": "#f5f24299",
+		"titleBar.inactiveBackground": "#88888899",
 		"titleBar.inactiveForeground": "#15202b99"
 	},
 	"peacock.color": "#888"
